# ComfyUI-QwenVL-slop

./: .gitignore  AILab_QwenVL.py  AILab_QwenVL_GGUF_PromptEnhancer.py  AILab_System_Prompts.json  README.md  README_it.md  hf_models.json  pyproject.toml  update.md
runpod/: BUILD_SCRIPTS.md  Dockerfile  Dockerfile.4090  README4090.md  README5090.md  build-local-4090.sh  build-local-5090.sh  start.sh
vastai/: READMECivitai.md  provisioning.sh
vastai/workflows/: PMP-LoRaStack-Upscale-Wildcards.json  WAN2.2-I2V-AutoPrompt-GGUF.json  WAN2.2-I2V-AutoPrompt-Story.json  WAN2.2-I2V-AutoPrompt.json  WAN2.2-I2V-Full-AutoPrompt-MMAudio-GGUF.json  WAN2.2-I2V-Full-AutoPrompt-MMAudio.json  WAN2.2-I2V-SVI-AutoPrompt-GGUF.json  WAN2.2-I2V-SVI-AutoPrompt-Story.json  WAN2.2-I2V-SVI-AutoPrompt.json  WAN2.2-T2V-I2V-AutoPrompt-Story.json  WAN2.2-T2V-I2V-Full-AutoPrompt-MMAudio-GGUF.json
